applist: Allow swiping up on shelf to show applist when autohide.

Test: manual
Bug: 881483, 891366
Change-Id: I88c5d7a5d41f7ef4013c84debf5c4e963f891d21
Reviewed-on: https://chromium-review.googlesource.com/c/1279356
Commit-Queue: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#599778}
Former-commit-id: c035b3ff56f31954c6ac938d5e250d00b4d7a561