ash/app_list/app_list_controller_impl.cc
@@ -729,7 +729,8 @@ bool AppListControllerImpl::ProcessHomeLauncherGesture(
       return home_launcher_gesture_handler_->OnScrollEvent(
           screen_location, event->details().scroll_y());
     case ui::ET_GESTURE_END:
-      return home_launcher_gesture_handler_->OnReleaseEvent(screen_location);
+      return home_launcher_gesture_handler_->OnReleaseEvent(
+          screen_location, /*out_dragged_down=*/nullptr);
     default:
       break;
   }
